--- a/amazing-animals.html
+++ b/amazing-animals.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
     <head>
         <title>Amazing animals</title>
@@ -9,10 +9,10 @@
         <header>
             <nav>
                 <ul>
-                    <li><a href="./index.html"></a>Home</li>
-                    <li><a href="./amazing-animals.html"></a>Amazing animals</li>
-                    <li><a href="./contact.html"></a>Contact</li>
-                    <li><a href="./about.html"></a>About</li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="amazing-animals.html">Amazing animals</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="about.html">About</a></li>
                 </ul>
             </nav>
         </header>
