--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Amazing animals</title>
         <meta name="description" content="this is a page about pangolins and other amazing animals">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./css/styles.css">
     </head>
     <body>
         <header>
