--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <main>
             <h1>Pangolins</h1>
             <h2>What's scaly from tip to tail and can curl into a ball?</h2>
-            <p>Pangolins!</p>
+            <h3>Pangolins!</h3>
             <p>These solitary, primarily nocturnal animals, are easily recognized by their full armor of scales.</p>
         </main>
         <footer>
