--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!doctype html>
-<html>
+<html lang="en-US">
     <head>
+        <meta charset="UTF-8">
         <title>Amazing animals</title>
         <meta name="description" content="this is a page about pangolins and other amazing animals">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./css/styles.css">
     </head>
     <body>
-        <header>
+        <header class="img-pangolin">
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
