adding img and mediaQ

--- a/amazing-animals.html
+++ b/amazing-animals.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="no-en">
     <head>
         <title>Amazing animals</title>
         <meta name="description" content="this is a page about pangolins and other amazing animals">
@@ -18,9 +18,11 @@
         </header>
         <main>
             <h1>Amazing animals</h1>
-            <h2>What's scaly from tip to tail and can curl into a ball?</h2>
-            <p>Pangolins!</p>
-            <p>These solitary, primarily nocturnal animals, are easily recognized by their full armor of scales.</p>
+            <h2>Here is a quote from WWF's website:</h2>
+            <blockquote cite="https://www.wwf.no/dyr-og-natur/truede-arter/truede-arter-i-norge">
+            Det er fort gjort å tenke "er det så farlig om en insekt-art blir borte"? Men alle artene har en egenverdi og en rett til å leve - og de har stor innvirkning på jorda vi lever på. Også her i Norge.
+            </blockquote>
+
         </main>
         <footer>
             Copyright &copy;2024 
