--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
             <h1>Pangolins</h1>
             <h2>What's scaly from tip to tail and can curl into a ball?</h2>
             <h3>Pangolins!</h3>
+        <div class="img-container">
+            <img src="./images/img-pangolin.png" alt="pangolin" class="pangolin-img"/>
+            <img src="./images/img-pangolin.png" alt="pangolin" class="pangolin-img"/>
+            <img src="./images/img-pangolin.png" alt="pangolin" class="pangolin-img"/>
+            <img src="./images/img-pangolin.png" alt="pangolin" class="pangolin-img"/>
+        </div>
             <p>These solitary, primarily nocturnal animals, are easily recognized by their full armor of scales.</p>
         </main>
         <footer>
