--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
             <img src="./images/img-pangolin.png" alt="pangolin" class="pangolin-img"/>
         </div>
             <p>These solitary, primarily nocturnal animals, are easily recognized by their full armor of scales.</p>
+            <div>
+                <img src="./images/img-nature.png" alt="pangolin" class="nature-img"/> 
+            </div>
         </main>
         <footer>
             Copyright &copy;2024 
