--- a/index.html
+++ b/index.html
@@ -34,7 +34,17 @@
             </div>
         </main>
         <footer>
-            Copyright &copy;2024 
+            <div>
+                <ul class="container-footer">
+                    <a href="index.html" class="active-footer">Home</a>
+                    <a href="amazing-animals.html" class="active-footer">Amazing animals</a>
+                    <a href="contact.html" class="active-footer">Contact</a>
+                    <a href="about.html" class="active-footer">About</a>
+                </ul>
+            </div>
+            <div>
+                Copyright &copy;2024 
+            </div>   
         </footer>
     </body>
 </html>
