--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
         <meta name="description" content="this is a page about pangolins and other amazing animals">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./css/styles.css">
+        <script src="https://kit.fontawesome.com/d3e1febfe2.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <header class="img-pangolin">
+            <input type="checkbox" id="menu-checkbox" />
+            <label for="menu-checkbox" class="hamburger-icon"><i class="fa-solid fa-bars"></i></label>
             <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="amazing-animals.html">Amazing animals</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><a href="about.html">About</a></li>
-                </ul>
+                <a href="index.html">Home</a>
+                <a href="amazing-animals.html">Amazing animals</a>
+                <a href="contact.html">Contact</a>
+                <a href="about.html">About</a>
             </nav>
         </header>
         <main>
