--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <title>Amazing animals</title>
+        <link rel="icon" type="image/png" href="./images/favicon-16x16.png">
+        <link rel="icon" type="image/png" href="./images/favicon-32x32.png">
+        <link rel="icon" type="image/png" href="./images/android-chrome-192x192.png">
         <meta name="description" content="this is a page about pangolins and other amazing animals">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./css/styles.css">
