adding pictures and text to about page

--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
         <meta name="description" content="this is a page about pangolins and other amazing animals">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./css/styles.css">
+        <link rel="stylesheet" href="./css/about.css">
         <script src="https://kit.fontawesome.com/d3e1febfe2.js" crossorigin="anonymous"></script>
     </head>
     <body>
@@ -24,9 +25,22 @@
         </header>
         <main>
             <h1>About us</h1>
-            <h2>What's scaly from tip to tail and can curl into a ball?</h2>
-            <p>Pangolins!</p>
-            <p>These solitary, primarily nocturnal animals, are easily recognized by their full armor of scales.</p>
+            <h2>Endangered species</h2>
+            <p>It was widespread destruction of African nature that inspired the English biologist, Sir Julian Huxley, to found the World Wide Fund for Nature (WWF) in 1961.</p>
+            <p>We carry out active environmental work in the field, but also behind desks, in collaboration with other players, in the corridors of politics and at international negotiating tables.</p>
+            <section>
+                <div>
+                    <img src="./images/img-pangolins3.png" alt="pangolins" class="img-pangolins3">
+                </div>
+            </section>
+            <section>
+                <div>
+                    <img src="./images/img-frog1.png" alt="img-frog1" class="img-frog1">
+                    <img src="./images/img-turtle1.png" alt="img-turtle1" class="img-turtle1">
+                    <img src="./images/img-frog1.png" alt="img-frog1" class="img-turtle1">
+                    <img src="./images/img-turtle1.png" alt="img-turtle1" class="img-turtle1">
+                </div>
+            </section>
         </main>
         <footer>
             <div>
