adding img to amazing-animals page

--- a/amazing-animals.html
+++ b/amazing-animals.html
@@ -24,11 +24,16 @@
         </header>
         <main>
             <h1>Amazing animals</h1>
-            <h2>Here is a quote from WWF's website:</h2>
+            <h2>Quote from WWF's website:</h2>
             <blockquote cite="https://www.wwf.no/dyr-og-natur/truede-arter/truede-arter-i-norge">
             Det er fort gjort å tenke "er det så farlig om en insekt-art blir borte"? Men alle artene har en egenverdi og en rett til å leve - og de har stor innvirkning på jorda vi lever på. Også her i Norge.
             </blockquote>
-
+        <section>
+            <img src="./images/img-villrein1.png" alt="villrein">
+            <img src="./images/img-gaupe1.png" alt="gaupe">
+            <img src="./images/img-piggsvinet1.png" alt="piggsvin">
+            <img src="./images/img-ulv1.png" alt="ulv">
+        </section>
         </main>
         <footer>
             <div>
