adding img and css to amazing animals page

--- a/amazing-animals.html
+++ b/amazing-animals.html
@@ -30,9 +30,15 @@
             </blockquote>
         <section>
             <img src="./images/img-villrein1.png" alt="villrein">
+            <p></p>
+        </section>
+        <section>
             <img src="./images/img-gaupe1.png" alt="gaupe">
+            <p></p>
             <img src="./images/img-piggsvinet1.png" alt="piggsvin">
+            <p></p>
             <img src="./images/img-ulv1.png" alt="ulv">
+            <p></p>
         </section>
         </main>
         <footer>
