--- a/amazing-animals.html
+++ b/amazing-animals.html
@@ -9,6 +9,7 @@
         <meta name="description" content="this is a page about pangolins and other amazing animals">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./css/styles.css">
+        <link rel="stylesheet" href="./css/amazing-animals.css">
         <script src="https://kit.fontawesome.com/d3e1febfe2.js" crossorigin="anonymous"></script>
     </head>
     <body>
