modified img sizes

--- a/amazing-animals.html
+++ b/amazing-animals.html
@@ -30,16 +30,16 @@
             Det er fort gjort å tenke "er det så farlig om en insekt-art blir borte"? Men alle artene har en egenverdi og en rett til å leve - og de har stor innvirkning på jorda vi lever på. Også her i Norge.
             </blockquote>
         <section>
-            <img src="./images/img-villrein1.png" alt="villrein">
-            <p></p>
+            <img src="./images/img-villrein1.png" alt="villrein" class="img-villrein1">
+            <p>Villrein</p>
         </section>
         <section>
-            <img src="./images/img-gaupe1.png" alt="gaupe">
-            <p></p>
-            <img src="./images/img-piggsvinet1.png" alt="piggsvin">
-            <p></p>
-            <img src="./images/img-ulv1.png" alt="ulv">
-            <p></p>
+            <img src="./images/img-gaupe1.png" alt="gaupe" class="img-gaupe1">
+            <p>Gaupe</p>
+            <img src="./images/img-piggsvinet1.png" alt="piggsvin" class="img-piggsvinet1">
+            <p>Piggsvin</p>
+            <img src="./images/img-ulv1.png" alt="ulv" class="img-ulv1">
+            <p>Ulv</p>
         </section>
         </main>
         <footer>
