responsiveness on contact page

--- a/contact.html
+++ b/contact.html
@@ -41,6 +41,7 @@
         </fieldset>
         <fieldset>
             <form>
+                <label for="name">Message</label>
                 <textarea id="message" name="message">Message</textarea>
             </form>
         </fieldset>
