adding resposive mediaQ to the page

--- a/contact.html
+++ b/contact.html
@@ -31,18 +31,32 @@
         <fieldset>
             <legend>your contact information</legend>
             <form>
-                <label for="name">First name</label>
-                <input type="text" id="text" name="first-name">
-                <label for="name">Last name</label>
-                <input type="text" id="text" name="last-name">
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email">
+                <div>
+                    <label for="name">First name</label>
+                </div>
+                <div>
+                    <input type="text" id="text" name="first-name">
+                </div>
+                <div>
+                    <label for="name">Last name</label>
+                </div>
+                <div>
+                    <input type="text" id="text" name="last-name">
+                </div>
+                <div>
+                    <label for="email">Email</label>
+                </div>
+                <div>
+                    <input type="email" id="email" name="email">
+                </div>  
             </form>
         </fieldset>
         <fieldset>
             <form>
                 <label for="name">Message</label>
-                <textarea id="message" name="message">Message</textarea>
+                <div>
+                    <textarea id="message" name="message">Message</textarea>
+                </div>  
             </form>
         </fieldset>
         <button class="submit-button">Submit</button>
