--- a/about.html
+++ b/about.html
@@ -33,6 +33,7 @@
                     <img src="./images/img-pangolins3.png" alt="pangolins" class="img-pangolins3">
                 </div>
             </section>
+            <div class="ball"></div>
             <section>
                 <div>
                     <img src="./images/img-frog1.png" alt="img-frog1" class="img-frog1">
