--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
                 </div>  
             </form>
         </fieldset>
-        <button class="submit-button">Submit</button>
+        <button>Submit</button>
         </main>
         <footer>
             <div>
