--- a/index.html
+++ b/index.html
@@ -23,9 +23,20 @@
             </nav>
         </header>
         <main>
+            <i class="fa-solid fa-chevron-right"></i>
+            <i class="fa-solid fa-chevron-left"></i>  
             <h1>Pangolins</h1>
             <h2>What's scaly from tip to tail and can curl into a ball?</h2>
             <h3>Pangolins!</h3>
+            <div id="slider">
+                <figure>
+                    <img src="./images/img-frog1.png" alt="frog">
+                    <img src="./images/img-pangolins3.png" alt="pangolins">
+                    <img src="./images/img-turtle1.png" alt="turtle">
+                    <img src="./images/img-piggsvinet1.png" alt="piggsvin">
+                    <img src="./images/img-frog1.png" alt="frog">
+                </figure>
+            </div>
         <div class="img-container">
             <img src="./images/img-pangolin.png" alt="pangolin" class="pangolin-img"/>
             <img src="./images/img-pangolin.png" alt="pangolin" class="pangolin-img"/>
