--- a/test.html
+++ b/test.html
@@ -8,29 +8,17 @@
         <link rel="icon" type="image/png" href="./images/android-chrome-192x192.png">
         <meta name="description" content="this is a page about pangolins and other amazing animals">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./css/styles.css">
-        <link rel="stylesheet" href="./css/amazing-animals.css">
+        <link rel="stylesheet" href="#">
+        <link rel="stylesheet" href="./css/test.css">
         <script src="https://kit.fontawesome.com/d3e1febfe2.js" crossorigin="anonymous"></script>
     </head>
     <body>
-        <header class="img-pangolin">
-            <input type="checkbox" id="menu-checkbox" />
-            <label for="menu-checkbox" class="hamburger-icon"><i class="fa-solid fa-bars"></i></label>
+        <header>
             <nav>
-                <a href="index.html">Home</a>
-                <a href="amazing-animals.html">Amazing animals</a>
-                <a href="contact.html">Contact</a>
-                <a href="about.html">About</a>
+                <h1>Test</h1>
             </nav>
         </header>
         <main>
-            <h1>Amazing animals</h1>
-            <h2>Quote from WWF's website:</h2>
-            <blockquote cite="https://www.wwf.no/dyr-og-natur/truede-arter/truede-arter-i-norge">
-            Det er fort gjort å tenke "er det så farlig om en insekt-art blir borte"? Men alle artene har en egenverdi og en rett til å leve - og de har stor innvirkning på jorda vi lever på. Også her i Norge.
-            </blockquote>
-            <i class="fa-solid fa-chevron-right"></i>
-            <i class="fa-solid fa-chevron-left"></i>
             <div id="slider">
                 <input type="radio" name="slider" id="slide1" checked>
                 <input type="radio" name="slider" id="slide2">
@@ -65,7 +53,9 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> 
+                <i class="fa-solid fa-chevron-left"></i>
+                <i class="fa-solid fa-chevron-right"></i>
                 <div id="controls">
                     <label for="slide1"></label>
                     <label for="slide2"></label>
@@ -77,33 +67,8 @@
                     <label for="slide2"></label>
                     <label for="slide3"></label>
                     <label for="slide4"></label>
-                </div>
-            </div>
-        <section>
-            <img src="./images/img-villrein1.png" alt="villrein" class="img-villrein1">
-            <p>Villrein</p>
-        </section>
-        <section>
-            <img src="./images/img-gaupe1.png" alt="gaupe" class="img-gaupe1">
-            <p>Gaupe</p>
-            <img src="./images/img-piggsvinet1.png" alt="piggsvin" class="img-piggsvinet1">
-            <p>Piggsvin</p>
-            <img src="./images/img-ulv1.png" alt="ulv" class="img-ulv1">
-            <p>Ulv</p>
-        </section>
-        </main>
-        <footer>
-            <div>
-                <ul class="container-footer">
-                    <a href="index.html" class="active-footer">Home</a>
-                    <a href="amazing-animals.html" class="active-footer">Amazing animals</a>
-                    <a href="contact.html" class="active-footer">Contact</a>
-                    <a href="about.html" class="active-footer">About</a>
-                </ul>
-            </div>
-            <div>
-                Copyright &copy;2024 
-            </div>   
-        </footer>
+                </div>    
+            </div> 
+        </main>      
     </body>
 </html>
