--- a/testtwo.html
+++ b/testtwo.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS lesson</title>
-    <script defer>
-        // Go get the "Hello World div"
-    </script>
+   <script src="./demo.js"></script>
 </head>
 <body>
     <div>Hello world!</div>
